"""empty message

Revision ID: 31362c1b38ca
Revises: 1e1773e7dc18
Create Date: 2023-11-16 17:40:13.209097

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '31362c1b38ca'
down_revision = '1e1773e7dc18'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('instructors',
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('specialty', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('name')
    )
    op.create_table('roles',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(length=120), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('users',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(), nullable=True),
    sa.Column('email', sa.String(), nullable=True),
    sa.Column('password', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('name')
    )
    op.create_table('gym_classes',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('gym_name', sa.String(), nullable=True),
    sa.Column('instructor_name', sa.String(), nullable=True),
    sa.Column('type_class', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['instructor_name'], ['instructors.name'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('user_roles',
    sa.Column('users_id', sa.Integer(), nullable=False),
    sa.Column('roles_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['roles_id'], ['roles.id'], ),
    sa.ForeignKeyConstraint(['users_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('users_id', 'roles_id')
    )
    op.create_table('bookings',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('gym_class_id', sa.Integer(), nullable=True),
    sa.Column('booking_date', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['gym_class_id'], ['gym_classes.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('bookings')
    op.drop_table('user_roles')
    op.drop_table('gym_classes')
    op.drop_table('users')
    op.drop_table('roles')
    op.drop_table('instructors')
    # ### end Alembic commands ###
