@startuml PowerAPP class

class Booking {
  +id: int
  +user_id: int
  +class_id: int
  +booking_date: Date
}

class GymClass {
  +id: int
  +gym_name: string
  +instructor_id: int
}

class Instructor {
  +id: int
  +name: string
  +email: string
  +password: string
  +specialty: string
}

class User {
  +id: int
  +name: string
  +email: string
  +password: string
}

' Un User puede tener muchas Booking (1 a muchos)
' Una GymClass puede tener muchas Booking (1 a muchos)
' Un Instructor puede instruir muchas GymClass (1 a muchos)

User "1" -- "*" Booking
GymClass "1" -- "*" Booking
Instructor "1" -- "*" GymClass

@enduml